--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@ obj
 *.ide
 *.log
 *.publishsettings
+/.idea/**/workspace.xml
+/.idea/**/tasks.xml
+/.idea/**/projectSettingsUpdater.xml
+/.idea/shelf/*
+/.idea/dictionaries
+/.idea/httpRequests/
 
 # System files
 .DS_Store
