--- a/src/HelpersCore.csproj
+++ b/src/HelpersCore.csproj
@@ -7,7 +7,7 @@
 		<Description>Common used helper methods.</Description>
 		<Authors>Alexander Fomin</Authors>
 		<RepositoryUrl>https://github.com/anfomin/helperscore</RepositoryUrl>
-		<VersionPrefix>1.3.6</VersionPrefix>
+		<VersionPrefix>1.4.1</VersionPrefix>
 		<VersionSuffix Condition="'$(VERSION_SUFFIX)'!=''">$(VERSION_SUFFIX)</VersionSuffix>
 		<RootNamespace>HelpersCore</RootNamespace>
 		<TargetFramework>net9.0</TargetFramework>
@@ -18,5 +18,20 @@
 
 	<ItemGroup>
 		<PackageReference Include="System.Linq.Async" Version="6.*" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="Strings.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Strings.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Strings.resx</DependentUpon>
+	  </Compile>
 	</ItemGroup>
 </Project>
