--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,11 @@ obj
 *.ide
 *.log
 *.publishsettings
+/.idea/shelf/
+/.idea/httpRequests/
 /.idea/**/workspace.xml
 /.idea/**/tasks.xml
 /.idea/**/projectSettingsUpdater.xml
-/.idea/shelf/*
-/.idea/dictionaries
-/.idea/httpRequests/
 
 # System files
 .DS_Store
