--- a/HelpersCore/HelpersCore.csproj
+++ b/HelpersCore/HelpersCore.csproj
@@ -1,22 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+	<Import Project="../Common.props" />
+
 	<PropertyGroup>
 		<AssemblyName>HelpersCore</AssemblyName>
 		<PackageId>HelpersCore</PackageId>
 		<PackageTags>helpers</PackageTags>
-		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<Description>Common used helper methods.</Description>
-		<Authors>Alexander Fomin</Authors>
-		<RepositoryUrl>https://github.com/anfomin/helperscore</RepositoryUrl>
-		<VersionPrefix>1.5.1</VersionPrefix>
-		<VersionSuffix Condition="'$(VERSION_SUFFIX)'!=''">$(VERSION_SUFFIX)</VersionSuffix>
 		<RootNamespace>HelpersCore</RootNamespace>
-		<TargetFramework>net9.0</TargetFramework>
-		<LangVersion>preview</LangVersion>
-		<Nullable>enable</Nullable>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<DebugType>embedded</DebugType>
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-		<NoWarn>$(NoWarn);CS1573;CS1591</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
