Minor code improvements

--- a/HelpersCore.SkiaSharp/HelpersCore.SkiaSharp.csproj
+++ b/HelpersCore.SkiaSharp/HelpersCore.SkiaSharp.csproj
@@ -12,6 +12,6 @@
   <ItemGroup>
     <ProjectReference Include="../HelpersCore/HelpersCore.csproj" />
     <PackageReference Include="SkiaSharp" Version="3.119.*" />
-    <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="3.119.*" Condition="'$(OS)' == 'UNIX'" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="3.119.1" Condition="'$(OS)' == 'UNIX'" />
   </ItemGroup>
 </Project>
