--- a/HelpersCore/HelpersCore.csproj
+++ b/HelpersCore/HelpersCore.csproj
@@ -9,7 +9,7 @@
 		<RootNamespace>HelpersCore</RootNamespace>
 	</PropertyGroup>
 
-	<ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
 		<PackageReference Include="System.Linq.Async" Version="6.*" />
 	</ItemGroup>
 
