--- a/common.props
+++ b/common.props
@@ -4,9 +4,9 @@
 		<Authors>Alexander Fomin</Authors>
 		<RepositoryUrl>https://github.com/anfomin/helperscore</RepositoryUrl>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<VersionPrefix>1.7.4</VersionPrefix>
+		<VersionPrefix>1.8.0</VersionPrefix>
 		<VersionSuffix Condition="'$(VERSION_SUFFIX)'!=''">$(VERSION_SUFFIX)</VersionSuffix>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFrameworks>net9.0;net10.0</TargetFrameworks>
 		<LangVersion>preview</LangVersion>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
