--- a/HelpersCore.Npgsql/HelpersCore.Npgsql.csproj
+++ b/HelpersCore.Npgsql/HelpersCore.Npgsql.csproj
@@ -11,6 +11,11 @@
 
 	<ItemGroup>
 		<ProjectReference Include="../HelpersCore/HelpersCore.csproj" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
 		<PackageReference Include="Npgsql" Version="9.0.*" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
+		<PackageReference Include="Npgsql" Version="10.0.*" />
 	</ItemGroup>
 </Project>
